# arm-risc0

./: .gitignore  Cargo.toml  README.md  bench_results.ods  bench_results.txt
aarm/: Cargo.toml
aarm/src/: action.rs  compliance_unit.rs  constants.rs  evm_adapter.rs  lib.rs  logic_proof.rs  transaction.rs  utils.rs
aarm_evm/: Cargo.toml
aarm_evm/src/: ProtocolAdapter.json  call.rs  conversion.rs  lib.rs  types.rs
anoma-interface/native/risc0_prover/: Cargo.toml  README.md
anoma-interface/native/risc0_prover/src/: encryption.rs  lib.rs  utils.rs
arm/: Cargo.toml  README.md
arm/benches/: aggregation.rs
arm/src/: action.rs  action_tree.rs  authorization.rs  compliance.rs  compliance_unit.rs  constants.rs  delta_proof.rs  encryption.rs  error.rs  evm.rs  hash.rs  lib.rs  logic_instance.rs  logic_proof.rs  merkle_path.rs  nullifier_key.rs  proving_system.rs  resource.rs  resource_logic.rs  rustler_util.rs  secp256k1.rs  sigma.rs  test_logic.rs  tests.rs  transaction.rs  utils.rs
arm/src/aggregation/: batch.rs  constants.rs  mod.rs  pcd.rs  proof.rs  sequential.rs
arm/src/compliance/: minimal.rs  mod.rs  shared_constraints.rs  sigmabus.rs  var.rs
arm/src/compliance_unit/: mod.rs  sigma.rs
arm/src/secp256k1/: other.rs  solana.rs
arm_circuits/batch_aggregation/: Cargo.toml  README.md
arm_circuits/batch_aggregation/methods/: Cargo.toml  build.rs
arm_circuits/batch_aggregation/methods/guest/: Cargo.toml
arm_circuits/batch_aggregation/methods/guest/src/: main.rs
arm_circuits/batch_aggregation/src/: main.rs
arm_circuits/compliance/: Cargo.toml
arm_circuits/compliance/methods/: Cargo.toml  build.rs
arm_circuits/compliance/methods/guest/: Cargo.toml
arm_circuits/compliance/methods/guest/src/: main.rs
arm_circuits/compliance/src/: main.rs
arm_circuits/counter/: Cargo.toml
arm_circuits/counter/methods/: Cargo.toml
arm_circuits/counter/methods/guest/: Cargo.toml
arm_circuits/counter/methods/guest/src/: main.rs
arm_circuits/counter/src/: main.rs
arm_circuits/logic_test/: Cargo.toml
arm_circuits/logic_test/methods/: Cargo.toml  build.rs
arm_circuits/logic_test/methods/guest/: Cargo.toml
arm_circuits/logic_test/methods/guest/src/: main.rs
arm_circuits/logic_test/src/: main.rs
arm_circuits/simple_kudo_denomination/: Cargo.toml
arm_circuits/simple_kudo_denomination/methods/: Cargo.toml
arm_circuits/simple_kudo_denomination/methods/guest/: Cargo.toml
arm_circuits/simple_kudo_denomination/src/: lib.rs  main.rs
arm_circuits/trivial_logic/: Cargo.toml
arm_circuits/trivial_logic/methods/: Cargo.toml  build.rs
arm_circuits/trivial_logic/methods/guest/: Cargo.toml
arm_circuits/trivial_logic/src/: main.rs
arm_gadgets/: Cargo.toml  README.md
arm_gadgets/src/: authority.rs  authorization.rs  encryption.rs  evm.rs  lib.rs
arm_tests/arm_test_app/: Cargo.toml  README.md
arm_tests/arm_test_app/src/: lib.rs
arm_tests/arm_test_witness/: Cargo.toml  README.md
arm_tests/arm_test_witness/src/: lib.rs
arm_types/: Cargo.toml
arm_types/src/: action.rs  action_tree.rs  aggregation.rs  compliance.rs  compliance_unit.rs  constants.rs  delta_proof.rs  lib.rs  logic_proof.rs  merkle_path.rs  transaction.rs  utils.rs
core/: Cargo.toml
core/src/: lib.rs
examples/compliance_circuit/: Cargo.toml  README.md  profile.pb
examples/compliance_circuit/methods/: Cargo.toml
examples/compliance_circuit/methods/guest/: Cargo.toml
examples/compliance_circuit/src/: main.rs
examples/kudo_application/: Cargo.toml  README.md
examples/kudo_application/app/: Cargo.toml
examples/kudo_application/app/src/: burn_tx.rs  issue_tx.rs  kudo_main.rs  lib.rs  simple_denomination.rs  simple_receive.rs  swap_tx.rs  transfer_tx.rs
examples/kudo_application/kudo_core/: Cargo.toml
examples/kudo_application/kudo_core/src/: denomination.rs  receive.rs  utils.rs
examples/kudo_application/kudo_examples/kudo_resource/: Cargo.toml
examples/kudo_application/kudo_examples/simple_denomination/: Cargo.toml
examples/kudo_application/kudo_examples/simple_receive/: Cargo.toml
examples/kudo_application/kudo_logic/kudo_main_logic/: Cargo.toml
examples/kudo_application/kudo_logic/logic_witness/: Cargo.toml
examples/kudo_application/kudo_logic/simple_denomination/: Cargo.toml
examples/kudo_application/kudo_logic/simple_receive/: Cargo.toml
examples/kudo_application/kudo_traits/: Cargo.toml
examples/kudo_application/kudo_traits/src/: burn.rs  compliance_info.rs  issue.rs  lib.rs  resource_info.rs  swap.rs  transfer.rs
examples/kudo_application/kudo_tx/: Cargo.toml
examples/kudo_application/kudo_tx/src/: burn.rs  issue.rs  lib.rs  swap.rs  transfer.rs
examples/kudo_application/logic_witness/: Cargo.toml
examples/kudo_application/logic_witness/src/: kudo_main_witness.rs  lib.rs  simple_denomination_witness.rs  simple_receive_witness.rs  utils.rs
examples/kudo_application/src/: burn_tx.rs  issue_tx.rs  swap_tx.rs  transfer_tx.rs
examples/simple_counter_application/app/: Cargo.toml
examples/simple_counter_application/app/src/: increment.rs  init.rs  lib.rs
examples/simple_transfer_application/app/: Cargo.toml
examples/simple_transfer_application/app/src/: burn.rs  lib.rs  migrate.rs  mint.rs  resource.rs  transfer.rs  utils.rs
host/: Cargo.toml
host/src/: main.rs
methods/always-false/: Cargo.toml
methods/always-false/src/: main.rs
native/aarm/: Cargo.toml
native/aarm/src/: action.rs  evm_adapter.rs  lib.rs  logic_proof.rs  transaction.rs  utils.rs
native/aarm_rustler/: Cargo.toml
native/aarm_rustler/src/: lib.rs
native/examples/kudo_application/: Cargo.toml
native/examples/kudo_application/denomination_logic/: Cargo.toml
native/examples/kudo_application/kudo_core/: Cargo.toml
native/examples/kudo_application/kudo_examples/: Cargo.toml
native/examples/kudo_application/kudo_logic/: Cargo.toml
native/examples/kudo_application/kudo_tx/: Cargo.toml
native/examples/kudo_application/receive_logic/: Cargo.toml
native/risc0_prover/: Cargo.toml  README.md
native/risc0_prover/src/: encryption.rs  lib.rs
(+237 files in other folders)
