[workspace]
resolver = "2"
members = [
  "arm",
  "arm_tests/arm_test_witness",
  "arm_tests/arm_test_app",
  "arm_gadgets",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anoma/arm-risc0"

[profile.bench]
lto = true

[profile.dev]
opt-level = 3

[profile.release]
lto = true
