[package]
name = "aarm_evm"
version = "0.1.0"
edition = "2024"

[dependencies]
aarm = { path = "../aarm" }
aarm_core = { path = "../aarm_core" }
dotenv = "0.15"
alloy = { version = "0.12", features = ["full"] }
rand = "0.9"
tokio = "1.44"
bincode = "1.3.3"
serde = { version = "1.0.197", default-features = false }