[package]
name = "anoma-rm-risc0"
description = "Anoma Resource Machine Implementation using RISC0 zkVM"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "3.0.3", features = [
  "std",
  "unstable",
], default-features = false }
solana_groth16_verifier = { git = "https://github.com/boundless-xyz/risc0-solana", package = "groth_16_verifier", tag = "v3.0.0", optional = true}
solana_verifier_router = { git = "https://github.com/boundless-xyz/risc0-solana", package = "verifier_router", tag = "v3.0.0", optional = true}
anchor-lang = {version = "0.31.1", optional = true}

serde = { version = "1.0.197", default-features = false }
serde_with = "3.14.1"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
rand = "0.8"
bincode = "1.3.3"
hex = "0.4"
lazy_static = "1.5.0"
bytemuck = { version = "1.12", features = ["derive"] }
thiserror = "2.0.6"

[features]
default = ["transaction", "prove", "evm"]
transaction = ["compliance_circuit"]
evm = ["dep:sha3"]
solana = ["transaction", "dep:sha2", "dep:solana_groth16_verifier", "dep:solana_verifier_router", "dep:anchor-lang"]
compliance_circuit = []
prove = ["risc0-zkvm/prove"]
bonsai = ["risc0-zkvm/bonsai"]
cuda = ["risc0-zkvm/cuda"]
aggregation = ["aggregation_circuit", "transaction"]
aggregation_circuit = []
