[package]
name = "anoma-rm-risc0-gadgets"
description = "Anoma Resource Machine Gadgets using RISC0 zkVM"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anoma-rm-risc0 = { version = "1.0.0", default-features = false }
alloy-primitives = "1.0.23"
alloy-sol-types = "1.0.23"
serde = { version = "1.0.197", default-features = false }
hex = "0.4"
aes-gcm = "0.10"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }
rand = "0.8"
zeroize = { version = "1.8.2" }
bincode = "1.3.3"
