[package]
name = "arm_types"
version = "1.0.0"
edition = "2021"

[dependencies]
risc0-zkp = { version = "=3.0.2", default-features = false}
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "ecdsa"
], default-features = false }
serde = { version = "1.0.197", default-features = false }
sha3 = { version = "0.10"}
thiserror = "2.0.6"
bytemuck = { version = "1.12", features = ["derive"] }
serde_with = "3.14.1"
lazy_static = "1.5.0"
hex = "0.4"

[features]

