[package]
name = "arm_types"
version = "1.0.0"
edition = "2021"

[dependencies]
risc0-zkp = { version = "=3.0.2", default-features = false}
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "ecdsa"
], default-features = false }
serde = { version = "1.0.197", default-features = false }
sha3 = { version = "0.10"}
thiserror = "2.0.6"
bytemuck = { version = "1.12", features = ["derive"] }
serde_with = "3.14.1"
lazy_static = "1.5.0"
hex = "0.4"
risc0-serde = {git = "https://github.com/agureev/risc0", package = "risc0-serde", rev = "160073c324d72a0bfb74c7f2cf8d8e2ee5879bca", default-features = false}

[features]

