[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
aarm-core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
starknet-crypto = "0.6.1"
merkle_light = "0.4.0"
generic-array = { version = "1.0.0", features = ["serde"] }
serde-big-array = "0.5.1"
risc0-zkp = { version = "0.20.1" }
anyhow = "1.0.81"
