[package]
name = "batch_aggregation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
batch_aggregation_methods = { path = "methods" }
risc0-zkvm = "3.0.3"
arm = { path = "../../arm", features = ["transaction"]}
bincode = "1.3.3"
serde = "1.0.219"
