[package]
name = "logic-test"
version = "0.1.0"
edition = "2021"

[dependencies]
logic-test-methods = { path = "methods" }
risc0-zkvm = "3.0.3"
arm = { path = "../../arm", default-features = false }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
bonsai = ["risc0-zkvm/bonsai"]
