[package]
name = "logic-test"
version = "1.0.0"
edition = "2021"

[dependencies]
logic-test-methods = { path = "methods" }
risc0-zkvm = "3.0.3"
anoma-rm-risc0 = { path = "../../arm", default-features = false }
anoma-rm-risc0-test-witness = { path = "../../arm_tests/arm_test_witness" }
bincode = "1.3.3"
borsh = { version = "1.5", default-features = false }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
bonsai = ["risc0-zkvm/bonsai"]
borsh = ["logic-test-methods/borsh"]
bin = ["logic-test-methods/bin"]
