[package]
name = "simple-kudo-denomination"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", default-features = false }
risc0-zkvm = "2.1.0"
kudo-logic-witness = { path = "../../examples/kudo_application/logic_witness" }
simple-kudo-denomination-methods = { path = "methods" }
