[package]
name = "trivial-logic"
version = "1.0.0"
edition = "2021"

[dependencies]
trivial-logic-methods = { path = "methods" }
risc0-zkvm = "3.0.3"
anoma-rm-risc0 = { path = "../../arm", default-features = false }
bincode = "1.3.3"
borsh = { version = "1.5", default-features = false }

[features]
default = []
borsh = ["trivial-logic-methods/borsh"]
bin = ["trivial-logic-methods/bin"]