[package]
name = "arm-test-app"
version = "1.0.0"
edition = "2021"

[dependencies]
arm = { path = "../../arm", features = ["aggregation"] }
arm-test-witness = { path = "../arm_test_witness" }
serde = { version = "1.0.197", default-features = false }
hex = "0.4"
lazy_static = "1.5.0"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }

[features]
default = []
cuda = ["arm/cuda"]
prove = ["arm/prove"]
bonsai = ["arm/bonsai"]
