[package]
name = "anoma-rm-risc0-test-app"
version = "1.0.0"
edition = "2021"

[dependencies]
anoma-rm-risc0 = { path = "../../arm", features = ["aggregation"] }
anoma-rm-risc0-test-witness = { path = "../arm_test_witness" }
serde = { version = "1.0.197", default-features = false }
hex = "0.4"
lazy_static = "1.5.0"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }

[features]
default = []
cuda = ["anoma-rm-risc0/cuda"]
prove = ["anoma-rm-risc0/prove"]
bonsai = ["anoma-rm-risc0/bonsai"]
