[package]
name = "anoma-rm-risc0-test-app"
description = "An Anoma Resource Machine Test Application using RISC0 zkVM"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anoma-rm-risc0 = { version = "1.0.0", features = ["aggregation"] }
anoma-rm-risc0-test-witness = "1.0.0"
serde = { version = "1.0.197", default-features = false }
hex = "0.4"
lazy_static = "1.5.0"
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }

[features]
default = []
cuda = ["anoma-rm-risc0/cuda"]
prove = ["anoma-rm-risc0/prove"]
bonsai = ["anoma-rm-risc0/bonsai"]
