[package]
name = "arm-test-witness"
version = "1.0.0"
edition = "2021"

[dependencies]
anoma-rm-risc0 = { path = "../../arm", default-features = false }
arm-gadgets = { path = "../../arm_gadgets" }
serde = { version = "1.0.197", default-features = false }
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }

[features]
default = []
