[package]
name = "anoma-rm-risc0-test-witness"
description = "An Anoma Resource Machine Test Witness using RISC0 zkVM"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anoma-rm-risc0-test-0112 = { path = "../../arm", default-features = false }
anoma-rm-risc0-gadgets = { path = "../../arm_gadgets" }
serde = { version = "1.0.197", default-features = false }
k256 = { version = "=0.13.3", features = [
  "arithmetic",
  "serde",
  "expose-field",
  "std",
  "ecdsa",
  "hash2curve",
], default-features = false }

[features]
default = []
