[package]
name = "aarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "1.1.2" }
serde = { version = "1.0.197", default-features = false }
compliance_circuit = { path = "../examples/compliance_circuit/methods", package = 'methods'}
aarm_core = { path = "../aarm_core" }
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }


[dev-dependencies]
bincode = "1.3"
serde_bytes = "0.11"