[package]
name = "aarm_rustler"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "aarm_rustler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
bincode = "1.3"
serde_bytes = "0.11"
serde = { version = "1.0.160", features = ["derive"] }
risc0-zkvm = { version = "1.1.2", features = ["prove"]}
serde_json = "1.0.120"
rand = "0.8"
methods = { path = "../examples/compliance-circuit/methods" }
aes-gcm = "0.10"         
k256 = { version = "0.13", features = ["serde", "arithmetic"] }
aarm-core = { path = "../aarm-core" }