[package]
name = "risc0_prover"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "risc0_prover"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
bincode = "1.3"
serde_bytes = "0.11"
serde = { version = "1.0.160", features = ["derive"] }
risc0-zkvm = { version = "1.1.2", features = ["prove"]}
borsh = "1.5.1" 
serde_json = "1.0.120"
rand = "0.8"
aarm-core = { path = "../compliance-circuit/core" }
methods = { path = "../compliance-circuit/methods" }
aarm-utils = { path = "../aarm-utils" }
aes-gcm = "0.10"         
k256 = { version = "0.13", features = ["serde", "arithmetic"] }
