[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = "2.1.0"
serde = { version = "1.0.197", default-features = false }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
rand = "0.8"
arm = { path = "../../../arm" }
kudo-traits = { path = "../kudo_traits" }
kudo-logic-witness = { path = "../kudo_logic/logic_witness" }
hex = "0.4"
lazy_static = "1.5.0"
