[package]
name = "kudo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "2.3.1", default-features = false, features = ["std", "unstable"] }
serde = { version = "1.0.197", default-features = false }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
rand = "0.8"
arm = { path = "../../../arm", default-features = false, features = ["transaction"] }
kudo-traits = { path = "../kudo_traits" }
kudo-logic-witness = { path = "../logic_witness" }
hex = "0.4"
lazy_static = "1.5.0"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
bonsai = ["risc0-zkvm/bonsai"]