[package]
name = "kudo-traits"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", default-features = false }
risc0-zkvm = { version = "2.3.1", default-features = false, features = ["std", "unstable"] }
rand = "0.8"
arm = { path = "../../../arm", default-features = false, features = ["transaction"] }