[package]
name = "kudo-logic-witness"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { path = "../../../arm", default-features = false }
serde = { version = "1.0.197", default-features = false }
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable"] }
rand = "0.8"