[package]
name = "simple-transfer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
simple-transfer-witness = { path = "../simple_transfer_witness" }
arm = { path = "../../../arm", default-features = false, features = ["transaction"] }
rand = "0.8"
risc0-zkvm = { version = "2.3.1", default-features = false, features = ["std", "unstable"] }
lazy_static = "1.5.0"
hex = "0.4"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
prove = ["risc0-zkvm/prove"]
bonsai = ["risc0-zkvm/bonsai"]
